...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCompanyBarHome">

        <Button
            android:id="@+id/btnNavRegisterProject"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#2979FF"
            android:text="Registrar Proyecto"
            android:textColor="#FFFFFF"
...
            android:backgroundTint="#9C27B0"
            android:text="Registrar Tarea"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnNavProjectList"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#4CAF50"
            android:text="Listado de proyectos"
            android:textColor="#FFFFFF"
...
